src/test/ui/consts/qualif-indirect-mutation-fail.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:8:9
   |
LL |     let mut a: (u32, Option<String>) = (0, None);
   |         ^^^^^ constant functions cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:14:9
   |
LL |     let mut x = None;
   |         ^^^^^ constants cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:30:9
   |
LL |     let _z = x;
   |         ^^ constants cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:35:9
   |
LL |     let x: Option<T> = None;
   |         ^ constant functions cannot evaluate destructors

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/qualif-indirect-mutation-fail.rs:43:9
   |
LL |     let _y = x;
   |         ^^ constant functions cannot evaluate destructors

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0493`.
